--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 		<p align="left" style="text-indent: 40px">
   <font face="Georgia, Times New Roman, Times, serif">I am always interested to do research in 
 interdisciplinary fields of computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Graphics, Theoretical Machine Learning, Operations Research and Statistics. </font></font></p>
-	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"> I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music, Game Theory and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
-	  </td>
+	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"> I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music, Game Theory and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me.</font></p>
+	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I am interested in the <font color="#8080FF">CTF(Capture the Flag)</font> contest although I only have limited knowledge on it. </font></p></td>
 	</tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
@@ -115,8 +115,8 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
-		  <p align="left" style="text-indent: 40px">
-	      
+		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><font color="#0000D0"><a href="https://thuctf2020.redbud.info/scoreboard">THUCTF2020</a></font></font>, <font face="Georgia, Times New Roman, Times, serif">12th place </font>
+		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2020/09 - 2020/10 </font>
 		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><font color="#0000D0">The 24th Artificial Inteligence Programming Contest</font> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">12th place </font>
 		
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2020/03 - 2020/05</font></p>
@@ -144,7 +144,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-09-15</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-10-05</font></i></p>
 
 </body>
 
