--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
 		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><font color="#0000D0"><a href="https://thuctf2020.redbud.info/scoreboard">THUCTF2020</a></font></font>, <font face="Georgia, Times New Roman, Times, serif">12th place </font>
+		    <font color="#000000" face="Georgia, Times New Roman, Times, serif"><a href="ctf/CTF_writeup.pdf"><font color="8080FF">[Writeup]</font></a></font>
 		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2020/09 - 2020/10 </font>
 		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><font color="#0000D0">The 24th Artificial Inteligence Programming Contest</font> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">12th place </font>
 		
