--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Zishuo Zhao's Homepage</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 
-<body bgcolor="lavender">
+<body>
 <table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
 	<!-- MSTableType="nolayout" -->
 	<tr>
@@ -150,7 +150,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-10-05</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-12-04</font></i></p>
 
 </body>
 
