--- a/index.html
+++ b/index.html
@@ -130,11 +130,8 @@ interdisciplinary fields of computer science, especially associated with mathema
 <font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td  valign="top" width="31%">
-		
-		
-		<p align="left" style="text-indent: 40px"><font color="lavender" size="-1" face="Georgia, Times New Roman, Times, serif">My favorite c</font></p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
+		<td  valign="top" width="31%"><p>&nbsp;</p>
+		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years. </font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Under the well-known peer pressure in Tsinghua, I still believe the kaleidoscope of arts can bring inspirations to research, and enjoy the time spent with nice friends on the campus while gaining new aspects of life. </font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I have a hobby on the deterministic-RPG puzzle game <font color="#7070c0">Tower of the Sorcerer</font><font color="#8080ff"> <font color="#000000">since primary school, and also designed  <a href="https://github.com/wiku30/MagicTower"><font color="#8080FF">my own version</font></a></font></font>.</font></p>
