--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
 	<!-- MSTableType="nolayout" -->
 	<tr>
-		<td valign="top" colspan="3">
+		<td colspan="3" valign="top">
 		<!-- MSCellType="ContentHead" -->
 		
 <p align="center"><font face="Calibri Light"><font size="6" face="Georgia, Times New Roman, Times, serif">Zishuo Zhao</font></font></p>
@@ -16,14 +16,16 @@
   <p><font color="#8080FF" face="Georgia, Times New Roman, Times, serif">Undergraduate, Yao Class 2020, IIIS, Tsinghua University
   </font></p>
   <p><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Computer Science / Applied Mathematics / Statistics</font></p>
-</div></td>
+</div>
+<p><span style="font-style: normal; font-weight: bold;"><font face="Georgia, Times New Roman, Times, serif">Anti-996 Statement</font></span><font face="Georgia, Times New Roman, Times, serif">: I am absolutely opposed to 996 working hour system or other forms of <span style="font-weight: bold">illegal</span> working schedules, and convinced that proper work-life balance benefits to both individual health and <span style="font-weight: bold">sustainable</span> development of companies and the society. Feeling heart-broken for young and beautiful lives lost under the overwhelming workload and pressure imposed by the illegal and inhuman working hour rules of some companies, I wish that all young lives would be cherished and such unlawful behavior of certain capitalists will face legal sanctions.</font></p>
+<p><span style="font-weight: bold">反996声明</span>：本人反对“996工作制”与其他一切形式的<span style="font-weight: bold">违法</span>工时制度，并相信工作与生活的合理平衡同时有利于个人身心健康与企业以至整个社会的<span style="font-weight: bold">可持续</span>发展。在为近来因某些公司有违法律与人性的工作强度、压力而逝去的年轻生命感到惋惜的同时，也希望每个年轻的生命都能被善待，某些资本家的违法行为亦能得到相应的法律制裁。</p></td>
 	</tr>
 	<tr>
 		<td valign="top" width="33%">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Welcome to my homepage! </font></p>
-		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Hi, I am here! I am currently studying computer science in Tsinghua University. In this class with all talented classmates around me, I am struggling through every difficulty and enjoying the life to improve myself and learn from peers from time to time.</font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Hi, I am here! I have just graduated from Tsinghua University. In this class with all talented classmates around me, I am struggling through every difficulty and enjoying the life to improve myself and learn from peers from time to time.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Although I major in computer science, I will not be a geek and will put the innate affection for the world into my research career and everyday life. I enjoy diving into the depths of math and trying to render the digital canvas into a colorful world.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Through the way with pervasive challenges, I feel more than delighted for the time of growing up with friends and collegues, and will always cherish the innocent days we grow up day by day. In the  future, I will get stronger and encourage myself to pursue for a bright tomorrow with all hopes coming true.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Take the time and make it count. </font></p>
@@ -85,7 +87,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i> <font face="Georgia, Times New Roman, Times, serif">(Project details on my <a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">CV</font></a>) </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
-		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Haihua Institute for Frontier Information Technology <a href="http://www.haihua.org.cn/"><font color="8080FF">[Link]</font></a> </font></p>
+		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Haihua Institute for Frontier Information Technology (Not 996, excellent!)<a href="http://www.haihua.org.cn/"><font color="8080FF">[Link]</font></a> </font></p>
 		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">2020/08 - now</font></p>
 		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Research Assistant on Quantum Communication, advised by Longbo Huang </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
