--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@ body,td,th {
 		<td width="36%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
+		<p style="text-indent: 40px"><font><em>Graduate</em>&nbsp;</font></p>
+        <p style="text-indent: 40px">PhD student, ISE, University of Illinois Urbana-Champaign&nbsp;</p>
+        <p style="text-indent: 40px">Expected graduation: 2025&nbsp;</p>
+		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><em>Undergraduate</em></p>
 		<p style="text-indent: 40px"><font >Dept. Computer Science and Technology, Tsinghua University</font></p>
 		<p style="text-indent: 40px"><font >2015/08 - 2016/05 </font>		</p>
 		<p style="text-indent: 40px"><font >Yao Class, IIIS, Tsinghua University</font></p>
 	  <p style="text-indent: 40px"><font >2016/05 - 2020/07  </font></p>
-	  <p style="text-indent: 40px">&nbsp;</p>
-	  <p style="text-indent: 40px"><font><em>Graduate</em>&nbsp;</font></p>
-	  <p style="text-indent: 40px">PhD student, ISE, University of Illinois Urbana-Champaign&nbsp;</p>
-	  <p style="text-indent: 40px">Expected graduation: 2026&nbsp;</p></td>
+	  <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -72,9 +73,13 @@ interdisciplinary fields of operations research and computer science, especially
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications</font></i></p>
+	<p align="left" style="text-indent: 40px"><i>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</i></p>
+	<p align="left" style="text-indent: 40px">Zishuo Zhao, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">IJCAI 2022</font>.</p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><font ><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
 	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
-	<p align="left" style="text-indent: 40px"><font >Accepted for <font color="#0000C0">ICCV 2019. </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
+	<p align="left" style="text-indent: 40px"><font >Accepted for <font color="#0000C0">ICCV 2019 </font>.</font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
@@ -109,7 +114,7 @@ interdisciplinary fields of operations research and computer science, especially
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2021-11-10</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2022-04-22</font></i></p>
 
 </body>
 
