--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ interdisciplinary fields of operations research and computer science, especially
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications</font></i></p>
 	<p align="left" style="text-indent: 40px"><i>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</i></p>
 	<p align="left" style="text-indent: 40px">Zishuo Zhao, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">IJCAI 2022</font>.</p>
+	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">IJCAI 2022</font>, Long Oral (top 4%)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><font ><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
 	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
-	<p align="left" style="text-indent: 40px"><font >Accepted for <font color="#0000C0">ICCV 2019 </font>.</font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
+	<p align="left" style="text-indent: 40px"><font >Accepted for <font color="#0000C0">ICCV 2019</font>.<font color="#0000C0"> </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
