--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@ interdisciplinary fields of operations research and computer science, especially
       <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications</font></i></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Research</font></i></p>
+	<p align="left" style="text-indent: 40px"><i>Bayesian-Nash-Incentive-Compatible Mechanism for Blockchain Transaction Fee Allocation</i></p>
+	<p align="left" style="text-indent: 40px">Zishuo Zhao, Xi Chen, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">CESC 2022</font></p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</i></p>
 	<p align="left" style="text-indent: 40px">Zishuo Zhao, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
 	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">IJCAI 2022</font>, Long Oral (top 3.75%)</p>
@@ -109,7 +113,7 @@ interdisciplinary fields of operations research and computer science, especially
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2022-04-22</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2022-09-11</font></i></p>
 
 </body>
 
