--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
-        <p align="left" style="text-indent: 40px">As a new PhD student, I am still in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing novel interdisciplinary models and solutions to ensure efficiency and/or fairness in theoretical and real-world applications.</p>
+        <p align="left" style="text-indent: 40px">As a second-year PhD student, I am  in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing interdisciplinary models and solutions to novel areas of blockchain systems.</p>
       <p align="left" style="text-indent: 40px">My life philosophy is <font color="8080ff"><em>Andante &amp; Cantabile</em></font>.&nbsp;</p></td>
 		<td width="36%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
 		<p style="text-indent: 40px"><font><em>Graduate</em>&nbsp;</font></p>
         <p style="text-indent: 40px">PhD student, ISE, University of Illinois Urbana-Champaign&nbsp;</p>
-        <p style="text-indent: 40px">Expected graduation: 2025&nbsp;</p>
+        <p style="text-indent: 40px">Expected graduation: Summer 2025&nbsp;</p>
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><em>Undergraduate</em></p>
 		<p style="text-indent: 40px"><font >Dept. Computer Science and Technology, Tsinghua University</font></p>
@@ -51,8 +51,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
-  <font >I am always interested to do research in 
-interdisciplinary fields of operations research and computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Optimization, Algorithm Design, Mechanism Design, Game Theory and Fair Division</font>, beside theories and applications in <font color="#4040FF">Computational Geometry/Topology, Computer Graphics/Vision and Robotics. </font></font></p>
+  <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields of<font color="#0000C0"> Optimization, Algorithm Design, Mechanism Design, Game Theory and Fair Division.</font><font color="#4040FF">&nbsp; </font></font></p>
 	    <p align="left" style="text-indent: 40px"><font > I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music   and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me.</font></p>
       <p align="left" style="text-indent: 40px"><font >Additionally, I am interested in the <font color="#8080FF">CTF(Capture the Flag)</font> contest although I only have limited knowledge on it. </font></p></td>
 	</tr>
@@ -69,16 +68,18 @@ interdisciplinary fields of operations research and computer science, especially
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Research</font></i></p>
 	<p align="left" style="text-indent: 40px"><i>Bayesian-Nash-Incentive-Compatible Mechanism for Blockchain Transaction Fee Allocation</i></p>
-	<p align="left" style="text-indent: 40px">Zishuo Zhao, Xi Chen, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">CESC 2022</font></p>
+	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px"><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font><br> 
+	  <font color="#0000FF">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>Best Paper Award</strong></font></p>
+<p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</i></p>
-	<p align="left" style="text-indent: 40px">Zishuo Zhao, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">Accepted for <font color="#0000C0">IJCAI 2022</font>, Long Oral (top 3.75%)</p>
+	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px"> <font >IJCAI 2022</font>, <font color="0000C0">Long Oral</font> (top 3.75%)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><font ><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
-	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
-	<p align="left" style="text-indent: 40px"><font >Accepted for <font color="#0000C0">ICCV 2019</font>.<font color="#0000C0"> </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
+	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, <u>Zishuo Zhao</u>, Yukun Lai, Shi-Min Hu. </font></p>
+	<p align="left" style="text-indent: 40px"><font > <font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
@@ -113,7 +114,7 @@ interdisciplinary fields of operations research and computer science, especially
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2022-09-11</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2022-12-06</font></i></p>
 
 </body>
 
