--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ body,td,th {
 <div align="center">
   <p><font color="#8080FF" >PhD Student, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><font color="#7070C0" >Operations Research / Computer Science / Applied Mathematics</font></p>
 </div>
 <p>&nbsp;</p></td>
 	</tr>
@@ -30,8 +29,8 @@ body,td,th {
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
-        <p align="left" style="text-indent: 40px">As a second-year PhD student, I am  in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing interdisciplinary models and solutions to novel areas of blockchain systems.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;second-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
+        <p align="left" style="text-indent: 40px">I am  in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing interdisciplinary models and solutions to novel areas of blockchain systems.</p>
       <p align="left" style="text-indent: 40px">My life philosophy is <font color="8080ff"><em>Andante &amp; Cantabile</em></font>.&nbsp;</p></td>
 		<td width="36%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
@@ -41,10 +40,11 @@ body,td,th {
         <p style="text-indent: 40px">Expected graduation: Summer 2025&nbsp;</p>
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><em>Undergraduate</em></p>
+					<p style="text-indent: 40px"><font >Yao Class, IIIS, Tsinghua University</font></p>
+	  <p style="text-indent: 40px"><font >2016/05 - 2020/07  </font></p>
 		<p style="text-indent: 40px"><font >Dept. Computer Science and Technology, Tsinghua University</font></p>
 		<p style="text-indent: 40px"><font >2015/08 - 2016/05 </font>		</p>
-		<p style="text-indent: 40px"><font >Yao Class, IIIS, Tsinghua University</font></p>
-	  <p style="text-indent: 40px"><font >2016/05 - 2020/07  </font></p>
+
 	  <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" valign="top">
 		<!-- MSCellType="NavBody" -->
@@ -101,7 +101,6 @@ body,td,th {
 		<td  valign="top" width="31%"><p>&nbsp;</p>
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
 		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years. </font></p>
-		<p align="left" style="text-indent: 40px"><font >Under the well-known peer pressure in Tsinghua, I still believe the kaleidoscope of arts can bring inspirations to research, and enjoy the time spent with nice friends on the campus while gaining new aspects of life. </font></p>
 		<p align="left" style="text-indent: 40px"><font >Additionally, I have a hobby on the deterministic-RPG puzzle game <font color="#7070c0">Tower of the Sorcerer</font><font color="#8080ff"> <font color="#000000">since primary school, and also designed  <a href="https://github.com/wiku30/MagicTower"><font color="#8080FF">my own version</font></a></font></font>.</font></p>
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal GPG Public Key(RSA-4096):</font></i></p>
