--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body,td,th {
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;second-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;third-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
         <p align="left" style="text-indent: 40px">I am  in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing interdisciplinary models and solutions to novel areas of blockchain systems.</p>
       <p align="left" style="text-indent: 40px">My life philosophy is <font color="8080ff"><em>Andante &amp; Cantabile</em></font>.&nbsp;</p></td>
 		<td width="36%" valign="top">
@@ -51,8 +51,8 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
-  <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields of<font color="#0000C0"> Optimization, Algorithm Design, Mechanism Design, Game Theory and Fair Division.</font><font color="#4040FF">&nbsp; </font></font></p>
-	    <p align="left" style="text-indent: 40px"><font > I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music   and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me.</font></p>
+  <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields of<font color="#0000C0"> Optimization, Algorithm Design, Mechanism Design and Cryptography.&nbsp;&nbsp;</font></font></p>
+	    <p align="left" style="text-indent: 40px"><font > I also have amateur interests in <font color="#8080FF">Computational Geometry, Computer Music   and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me.</font></p>
       <p align="left" style="text-indent: 40px"><font >Additionally, I am interested in the <font color="#8080FF">CTF(Capture the Flag)</font> contest although I only have limited knowledge on it. </font></p></td>
 	</tr>
 	<tr>
