--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-		<td colspan="2" valign="top">
+		<td height="737" colspan="2" valign="top">
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
@@ -100,16 +100,10 @@ body,td,th {
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td  valign="top" width="31%"><p>&nbsp;</p>
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
-		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years. </font></p>
-		<p align="left" style="text-indent: 40px"><font >Additionally, I have a hobby on the deterministic-RPG puzzle game <font color="#7070c0">Tower of the Sorcerer</font><font color="#8080ff"> <font color="#000000">since primary school, and also designed  <a href="https://github.com/wiku30/MagicTower"><font color="#8080FF">my own version</font></a></font></font>.</font></p>
-<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal GPG Public Key(RSA-4096):</font></i></p>
-		<p align="left" style="text-indent: 40px"><font size="-1" >I have a GPG keypair for secure communication, which  can be found <a href="http://keys.gnupg.net/pks/lookup?search=wiku30&fingerprint=on&op=index"><font color="#8080FF">here</font></a> on gnupg.net, with the fingerprint</font><font size="-1">:</font></p>
-		<div align="center">
-		  <pre><font size="-2" face="Courier New, Courier, monospace">BD41 48A0 8CFE FC41 1679 E74A FC44 6B90 77EA EF00</font></pre>
-		  </div>
-		<p align="left" style="text-indent: 40px"><font size="-1" >Additionally, for any critical document/information I may send you, you can ask me for a digital signature which can be checked by the public key before, for verification of authenticity.</font></p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years.</font></p>
+		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Traditional Chinese.</p>
+		<p align="left" style="text-indent: 40px"><font >I also have a hobby on the deterministic-RPG puzzle game <font color="#7070c0">Tower of the Sorcerer</font><font color="#8080ff"> <font color="#000000">since primary school, and also designed  <a href="https://github.com/wiku30/MagicTower"><font color="#8080FF">my own version</font></a></font></font>.</font></p>
+<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
 
