--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body,td,th {
 		<td  valign="top" width="31%"><p>&nbsp;</p>
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
 		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years.</font></p>
-		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Traditional Chinese.</p>
+		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Classical Chinese.</p>
 		<p align="left" style="text-indent: 40px"><font >I also have a hobby on the deterministic-RPG puzzle game <font color="#7070c0">Tower of the Sorcerer</font><font color="#8080ff"> <font color="#000000">since primary school, and also designed  <a href="https://github.com/wiku30/MagicTower"><font color="#8080FF">my own version</font></a></font></font>.</font></p>
 <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
