--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ body,td,th {
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Research</font></i></p>
+	<p align="left" style="text-indent: 40px"><em>Personalized Pricing with Group Fairness Constraint</em></p>
+	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
+	<p align="left" style="text-indent: 40px">ACM Conference on Fairness, Accountability, and Transparency (ACM <em>FAccT</em>), 2023</p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i>Bayesian-Nash-Incentive-Compatible Mechanism for Blockchain Transaction Fee Allocation</i></p>
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
 	<p align="left" style="text-indent: 40px"><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font><br> 
@@ -107,7 +111,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2022-12-06</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2023-04-07</font></i></p>
 
 </body>
 
